--- a/projects/bug-report.html
+++ b/projects/bug-report.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Projects &#8211; Bug Report</title>
@@ -45,11 +45,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../../ivan-qa/resume.html">Resume</li></a>
+                        <li><a href="../../ivan-qa/resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/projects.html">Projects</li></a>
+                        <li><a href="../../ivan-qa/projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -57,8 +57,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/feedback.html">Feedback</li></a>
-
+                        <li><a href="../../ivan-qa/feedback.html">Feedback</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,9 +66,9 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="../../ivan-qa/index.html">Main</a></li>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                <a href="../../ivan-qa/projects.html">Projects</a>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
+                <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Bug Report</li>
             </ul>
         </nav>
@@ -227,6 +226,8 @@
                         <h4 id="my_bug_examples_by_type">My Bug Examples by Type</h4>
                         <h5>Crash</h5>
                         <p><b>Title: </b>[Windows 11] MP - Connecting to server leads to an error that can't be closed</p>
+                        <p><b>Bug Severity: </b>Blocker</p>
+                        <p><b>Bug Priority: </b>High</p>
                         <p><b>Action Performed: </b></p>
                         <ol>
                             <li>Launch the application and login</li>
@@ -248,12 +249,14 @@
                         <p><b>Device Model: </b>Lenovo Legion 5 (2021)</p>
                         <p><b>Device Software Version: </b> Windows 11 22H2</p>
                         <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-crash.png"><img src="../images/articles/bug-report-crash.png" id="bug-type-img"></a><br>
+                            <a href="../images/articles/bug-report-crash.png"><img src="../images/articles/bug-report-crash.png" class="bug-type-img" alt="Crash type bug"></a><br>
                             <i>*some information is blurred due to NDA</i>  
                         </p>
 
                         <h5>Performance</h5>
                         <p><b>Title: </b>[Windows 11/Chrome] On Demand - Long video keeps buffering in first minutes of playing</p>
+                        <p><b>Bug Severity: </b>Major</p>
+                        <p><b>Bug Priority: </b>Medium</p>
                         <p><b>Action Performed: </b></p>
                         <ol>
                             <li>Go to URL *url-is-here*</li>
@@ -270,12 +273,14 @@
                         <p><b>Device Model: </b>Lenovo Legion 5 (2021)</p>
                         <p><b>Device Software Version: </b> Windows 11 - 22H2 / Chrome 108.0.5359.125 (64-bit)</p>
                         <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-performance.png"><img src="../images/articles/bug-report-performance.png" id="bug-type-img"></a><br>
+                            <a href="../images/articles/bug-report-performance.png"><img src="../images/articles/bug-report-performance.png" class="bug-type-img" alt="Perfomance type bug"></a><br>
                             <i>*some information is blurred due to NDA</i>  
                         </p>
 
                         <h5>Functional</h5>
                         <p><b>Title: </b>Windows 10, Chrome - Search doesnt' work in "Who can see page"</p>
+                        <p><b>Bug Severity: </b>Major</p>
+                        <p><b>Bug Priority: </b>High</p>
                         <p><b>Action Performed: </b></p>
                         <ol>
                             <li>Go to URL *url-is-here*</li>
@@ -291,12 +296,14 @@
                         <p><b>Device Model: </b>Laptop Lenovo 14 (2019)</p>
                         <p><b>Device Software Version: </b> Windows 10 - Enterprise / Chrome - Version 117.0.5938.63 (Official Build) (64-bit)</p>
                         <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-functional.png"><img src="../images/articles/bug-report-functional.png" id="bug-type-img"></a><br>
+                            <a href="../images/articles/bug-report-functional.png"><img src="../images/articles/bug-report-functional.png" class="bug-type-img" alt="Functional type bug"></a><br>
                             <i>*some information is blurred due to NDA</i>  
                         </p>
 
                         <h5>Visual</h5>
                         <p><b>Title: </b>Windows 10, Chrome - Pop-up info window is displayed behind number after hover a cursor on Chart</p>
+                        <p><b>Bug Severity: </b>Minor</p>
+                        <p><b>Bug Priority: </b>Minor</p>
                         <p><b>Action Performed: </b></p>
                         <ol>
                             <li>Go to URL *url-is-here*</li>
@@ -313,12 +320,14 @@
                         <p><b>Device Model: </b>Laptop Lenovo 14 (2019)</p>
                         <p><b>Device Software Version: </b> Windows 10 - Enterprise / Chrome - Version 117.0.5938.63 (Official Build) (64-bit)</p>
                         <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-functional.png"><img src="../images/articles/bug-report-functional.png" id="bug-type-img"></a><br>
+                            <a href="../images/articles/bug-report-visual.png"><img src="../images/articles/bug-report-visual.png" class="bug-type-img" alt="Visual type bug"></a><br>
                             <i>*some information is blurred due to NDA</i>  
                         </p>
 
                         <h5>Content</h5>
                         <p><b>Title: </b>Samsung Galaxy S22 5G - Registration - Confirmation text not translated to English</p>
+                        <p><b>Bug Severity: </b>Minor</p>
+                        <p><b>Bug Priority: </b>Minor</p>
                         <p><b>Action Performed: </b></p>
                         <ol>
                             <li>Go to URL *url-is-here*</li>
@@ -339,7 +348,7 @@
                         <p><b>Device Model: </b>Samsung Galaxy S22 5G</p>
                         <p><b>Device Software Version: </b> Android 13 / Chrome - Version 117.0.5938.63 (Official Build) (64-bit)</p>
                         <p><b>Attachments: </b><br><br>
-                            <a href="../images/articles/bug-report-visual.png"><img src="../images/articles/bug-report-visual.png" id="bug-type-img"></a><br>
+                            <a href="../images/articles/bug-report-content.jpg"><img src="../images/articles/bug-report-content.jpg" class="bug-type-img" alt="Content type bug"></a><br>
                             <i>*some information is blurred due to NDA</i>  
                         </p>
 
@@ -383,7 +392,7 @@
                 <!--footer-section-2-->
                 <li>
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
-                    <a href="mailto: gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
+                    <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
                 <!--footer-section-3-->
                 <li>
