--- a/projects/test-plan.html
+++ b/projects/test-plan.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Projects &#8211; Test Plan</title>
@@ -45,11 +45,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../../ivan-qa/resume.html">Resume</li></a>
+                        <li><a href="../../ivan-qa/resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/projects.html">Projects</li></a>
+                        <li><a href="../../ivan-qa/projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -57,8 +57,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/feedback.html">Feedback</li></a>
-
+                        <li><a href="../../ivan-qa/feedback.html">Feedback</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,9 +66,9 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="../../ivan-qa/index.html">Main</a></li>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                <a href="../../ivan-qa/projects.html">Projects</a>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
+                <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Test Plan</li>
             </ul>
         </nav>
@@ -123,6 +122,7 @@
                             it).
                         </p>
                         <p><b>Design</b></p>
+                        <p>
                         information on what to test and a good estimate of how many test cases we might get etc. A
                         second version of the
                         Test plan is created incorporating all this information.
@@ -668,7 +668,6 @@
                             <li>Release notes</li>
                         </ul>
 
-
                     </article>
 
                     <article class="article-section">
@@ -685,7 +684,6 @@
                         <ol>
                             <li><a href="https://istqb-glossary.page/test-plan/">ISTQB Glossary - Test Plan<i
                                         class="fa fa-external-link" aria-hidden="true"></i></a></li>
-                            </li>
                             <li><a href="https://www.guru99.com/test-plan-for-project.html">Test Plan Template (Sample
                                     Document)<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
                             <li><a href="https://tryqa.com/what-is-test-planning-what-are-work-products-in-testing/">What
@@ -694,7 +692,6 @@
                                     href="https://www.knowledgehut.com/blog/software-testing/test-plan-in-software-testing">What
                                     is a Test Plan in
                                     Software Testing?<i class="fa fa-external-link" aria-hidden="true"></i></a></li>
-
                         </ol>
                     </article>
 
@@ -735,7 +732,7 @@
                 <!--footer-section-2-->
                 <li>
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
-                    <a href="mailto: gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
+                    <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
                 <!--footer-section-3-->
                 <li>
