--- a/projects/test-strategy.html
+++ b/projects/test-strategy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Projects &#8211; Test Strategy</title>
@@ -45,11 +45,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../../ivan-qa/resume.html">Resume</li></a>
+                        <li><a href="../../ivan-qa/resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/projects.html">Projects</li></a>
+                        <li><a href="../../ivan-qa/projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -57,8 +57,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/feedback.html">Feedback</li></a>
-
+                        <li><a href="../../ivan-qa/feedback.html">Feedback</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,9 +66,9 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="../../ivan-qa/index.html">Main</a></li>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                <a href="../../ivan-qa/projects.html">Projects</a>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
+                <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Test Strategy</li>
             </ul>
         </nav>
@@ -511,7 +510,7 @@
                 <!--footer-section-2-->
                 <li>
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
-                    <a href="mailto: gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
+                    <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
                 <!--footer-section-3-->
                 <li>
