--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Ivan Gavrikov &#8211; Projects</title>
@@ -46,21 +46,20 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <a href="../../ivan-qa/resume.html">
-                            <li>Resume</li>
-                        </a>
+                        <li><a href="../../ivan-qa/resume.html">Resume</a></li>
+
                         <li>|</li>
-                        <a href="../../ivan-qa/projects.html">
-                            <li>Projects</li>
-                        </a>
+
+                        <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+
                         <li>|</li>
-                        <a href="https://github.com/g1f">
-                            <li>GitHub</li>
-                        </a>
+
+                        <li><a href="https://github.com/g1f">GitHub</a></li>
+
                         <li>|</li>
-                        <a href="../../ivan-qa/feedback.html">
-                            <li>Feedback</li>
-                        </a>
+
+                        <li><a href="../../ivan-qa/feedback.html">Feedback</a></li>
+
                     </ul>
                 </nav>
             </div>
@@ -69,10 +68,10 @@
         <!--main-nav-menu-->
         <nav class="main-nav">
             <ul>
-                <li><a href="../index.html">Main</a></li>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
-                <li><a href="../projects.html">Projects</a></li>
-                <i class="fa fa-angle-right" aria-hidden="true"></i>
+                <li><a href="../../ivan-qa/index.html">Main</a></li>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
+                <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+                <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Calculator</li>
             </ul>
         </nav>
@@ -101,8 +100,8 @@
                         <button class="btn-calc" id="btn-circle-length">Circle length</button>
                     </div>
 
-                    <h3>Result</h3>
                     <article class="calc-result-section">
+                        <h3>Result</h3>
 
                         <img id="img-sqr">
                         <p id="p-sqr"></p><br>
@@ -123,11 +122,6 @@
                 
             </main>
 
-            <aside class="side-section">
-                <!--section-->
-                <section class="side-section-wrapper">
-                </section>
-            </aside>
         </div>
         <!--footer-->
         <footer class="footer">
@@ -140,7 +134,7 @@
                 <!--footer-section-2-->
                 <li>
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
-                    <a href="mailto: gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
+                    <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
                 <!--footer-section-3-->
                 <li>
