Minor changes to gallery section
To get image-thumb more flexibility

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <tr>
                                 <td>Bug Management</td>
                                 <td colspan="2"><a href="https://www.atlassian.com/software/jira"><img
-                                            src="../ivan-qa/images/icons/logo-attlassian-jira.png" alt=" logo">Atlassian JIRA</a></td>
+                                            src="../ivan-qa/images/icons/logo-atlassian-jira.png" alt="Atlassian JIRA logo">Atlassian JIRA</a></td>
                                 <td><a href="https://www.testrail.com/"><img src="../ivan-qa/images/icons//logo-test-rail.png" alt="testrail logo">TestRail</a></td>
                             </tr>
                         
