--- a/projects.html
+++ b/projects.html
@@ -75,106 +75,111 @@
         <div class="main-wrapper">
             <!--main-section-->
             <main class="main-section">
-                <section class="main-section-item">
+                <div class="main-section-item">
                     <div class="meta">
                         <h3 id="my_test_activity"><i class="fa fa-suitcase" aria-hidden="true"></i>My QA Activity
                         </h3>
-                        <p>This section is related to the common aspects, technologies and other activities in Quality Assurance I use daily.</p>
+                        <p>This section is related to the common aspects, technologies and other activities in Quality
+                            Assurance I use daily.</p>
                     </div>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Test Artefacts</h4>
                         <p>This list is not comprehensive, but includes main software testing artefacts.</p>
                         <ul>
                             <li><a href="../ivan-qa/projects/test-strategy.html">
-                                Test Strategy
+                                    Test Strategy
                                 </a>
                             </li>
                             <li><a href="../ivan-qa/projects/test-plan.html">
-                                Test Plan
+                                    Test Plan
                                 </a>
                             </li>
                             <li><a href="../ivan-qa/projects/test-case.html">
-                                Test Case (with examples)
+                                    Test Case
                                 </a>
                             </li>
                             <li><a href="../ivan-qa/projects/bug-report.html">
-                                Bug Report (with examples)
+                                    Bug Report
                                 </a>
                             </li>
                             <li><a href="../ivan-qa/projects/test-report.html">
-                                Test Report
-                            </a>
-                        </li>
+                                    Test Report
+                                </a>
+                            </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Examples</h4>
                         <ul>
+                            <li><a href="../ivan-qa/projects/my-bug-reports.html">
+                                My Bug Reports
+                            </a>
+                            </li>
+
                             <li><a href="#">
-                                API
+                                    API
                                 </a>
                             </li>
                             <li><a href="#">
-                                Cypress
-                            </a>
-                        </li>
+                                    Cypress
+                                </a>
+                            </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Tools</h4>
                         <ul>
                             <li><a href="../ivan-qa/projects/nu-HTML-checker.html">
-                                Nu HTML Checker
+                                    Nu HTML Checker
                                 </a> - an article how to check your website for issues with HTML tags
                             </li>
                             <li><a href="https://xenus-link-sleuth.en.softonic.com/">
-                                Xenu’s Link Sleuth<i class="fa fa-external-link"
-                                aria-hidden="true"></i>
+                                    Xenu’s Link Sleuth<i class="fa fa-external-link" aria-hidden="true"></i>
                                 </a> - checks for broken links on websites
                             </li>
                             <li><a href="https://openvas.org/">
-                                OpenVAS<i class="fa fa-external-link"
-                                aria-hidden="true"></i>
+                                    OpenVAS<i class="fa fa-external-link" aria-hidden="true"></i>
                                 </a> - is a full-featured vulnerability scanner
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4 id="simple_calculator"><i class="fa fa-calculator" aria-hidden="true"></i>Simple
                             Calculator</h4>
                         <p><a href="../ivan-qa/projects/calculator.html">There is an example of my simple calculator
-                                written on JavaScript.</a></p>
-                        </article>
+                                written on JavaScript.</a>
+                        </p>
+                    </section>
+                </div>
 
-                </section>
-
-                <section class="main-section-item">
+                <div class="main-section-item">
                     <div class="meta">
                         <h3 id="useful_qa_articles"><i class="fa fa-thumb-tack" aria-hidden="true"></i>Useful QA
                             Articles</h3>
-                        <p>There are some useful articles which can be used to gain or refresh your current experience
+                        <p>There are some useful articles which can be used to gain or refresh your current
+                            experience
                             and knowledge.</p>
                     </div>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Standards</h4>
                         <ul>
                             <li><a href="https://html.spec.whatwg.org/">
-                                HTML Living Standard<i class="fa fa-external-link" aria-hidden="true"></i>
-                            </a>
+                                    HTML Living Standard<i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
                             </li>
                             <li><a href="https://www.w3.org/WAI/standards-guidelines/">
                                     W3C Accessibility Standards<i class="fa fa-external-link" aria-hidden="true"></i>
                                 </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Roadmaps</h4>
                         <ul>
                             <li><a href="https://roadmap.sh/qa">
@@ -184,14 +189,15 @@
                             </li>
                             <li><a href="https://medium.com/slalom-build/quality-engineer-learning-roadmap-fddfcb77409e"
                                     rel="Quality Engineer Learning Roadmap">
-                                    A beginner’s guide to the skills, tools, and technologies you need for a career as a
+                                    A beginner’s guide to the skills, tools, and technologies you need for a career
+                                    as a
                                     Quality Engineer or SDET<i class="fa fa-external-link" aria-hidden="true"></i>
                                 </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Checklists & Cheatsheets</h4>
                         <ul>
                             <li><a href="https://www.guru99.com/complete-web-application-testing-checklist.html">
@@ -205,29 +211,27 @@
                                         aria-hidden="true"></i>
                                 </a>
                             </li>
-                            <li><a
-                                href="https://github.com/mfaisalkhatri/Manual_Testing/">
-                                GitHub - mfaisalkhatri - Manual Testing<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
-                            </a>
+                            <li><a href="https://github.com/mfaisalkhatri/Manual_Testing/">
+                                    GitHub - mfaisalkhatri - Manual Testing<i class="fa fa-external-link"
+                                        aria-hidden="true"></i>
+                                </a>
                             </li>
 
                             <li><a
-                                href="https://cheatsheetseries.owasp.org/cheatsheets/XSS_Filter_Evasion_Cheat_Sheet.html">
-                                XSS Filter Evasion Cheat Sheet<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
-                            </a>
+                                    href="https://cheatsheetseries.owasp.org/cheatsheets/XSS_Filter_Evasion_Cheat_Sheet.html">
+                                    XSS Filter Evasion Cheat Sheet<i class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
                             </li>
                             <li><a
-                                href="https://pentestmonkey.net/cheat-sheet/sql-injection/mysql-sql-injection-cheat-sheet">
-                                MySQL SQL Injection Cheat Sheet<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
-                            </a>
+                                    href="https://pentestmonkey.net/cheat-sheet/sql-injection/mysql-sql-injection-cheat-sheet">
+                                    MySQL SQL Injection Cheat Sheet<i class="fa fa-external-link"
+                                        aria-hidden="true"></i>
+                                </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>API</h4>
                         <ul>
                             <li><a href="https://www.softwaretestinghelp.com/api-testing-tutorial/">
@@ -237,20 +241,20 @@
                             </li>
 
                             <li><a href="https://www.softwaretestinghelp.com/web-services-tutorial/">
-                                Web Services Tutorial: Components, Architecture, Types & Examples<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
+                                    Web Services Tutorial: Components, Architecture, Types & Examples<i
+                                        class="fa fa-external-link" aria-hidden="true"></i>
                                 </a>
                             </li>
 
                             <li><a href="https://github.com/DannyDainton">
-                                GitHub - DannyDainton - Senior SDET<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
+                                    GitHub - DannyDainton - Senior SDET<i class="fa fa-external-link"
+                                        aria-hidden="true"></i>
                                 </a>
                             </li>
 
                             <li><a href="https://developer.twitter.com/en">
-                                Twitter API - Documentation for Developers<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
+                                    Twitter API - Documentation for Developers<i class="fa fa-external-link"
+                                        aria-hidden="true"></i>
                                 </a>
                             </li>
 
@@ -261,14 +265,14 @@
                             </li>
 
                             <li><a href="https://openweathermap.org/api">
-                                Weather API - Documentation for Developers<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
+                                    Weather API - Documentation for Developers<i class="fa fa-external-link"
+                                        aria-hidden="true"></i>
                                 </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Payment</h4>
                         <ul>
                             <li><a href="https://stripe.com/docs/testing">
@@ -282,9 +286,9 @@
                                 </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Accessibility</h4>
                         <ul>
                             <li><a href="https://www.w3.org/WAI/ARIA/apg/patterns/">
@@ -293,25 +297,24 @@
                                 </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Security</h4>
                         <ul>
                             <li><a href="https://owasp.org/">
-                                    OWASP Guide<i class="fa fa-external-link"
-                                        aria-hidden="true"></i>
+                                    OWASP Guide<i class="fa fa-external-link" aria-hidden="true"></i>
                                 </a>
                             </li>
                             <li><a href="https://www.isecom.org/">
-                                The Institute for Security and Open Methodologies (ISECOM)<i class="fa fa-external-link"
-                                    aria-hidden="true"></i>
-                            </a>
-                        </li>
+                                    The Institute for Security and Open Methodologies (ISECOM)<i
+                                        class="fa fa-external-link" aria-hidden="true"></i>
+                                </a>
+                            </li>
                         </ul>
-                    </article>
+                    </section>
 
-                    <article class="article-section">
+                    <section class="article-section">
                         <h4>Databases</h4>
                         <ul>
                             <li><a href="https://www.sqlservertutorial.net/sql-server-basics/">
@@ -324,9 +327,9 @@
                                 </a>
                             </li>
                         </ul>
-                    </article>
+                    </section>
 
-                </section>
+                </div>
 
             </main>
 
